# youtube-recycle-bin

./: .gitignore  _config.yml  config.py  device_info.py  find_video.py  gui.py  json_file.py  nonne.py  pyproject.toml  rand_gens.py  requirements.txt  search_parse.py  search_term.py  search_youtube.py
docs/: README.md  leads.json
files/: leads.json  lv_result.json  result.json
