
[project]
name = "youtube-recycle-bin"
version = "0.1.0"
requires-python = ">=3.13.9"
dependencies = [
  "fastapi>=0.121.0",
  "uvicorn<=0.35.0",
  "nicegui==3.3.1",
  "pip>=25.3",
  "pipreqs==0.4.13",
  "pydantic==2.12.3",
  "pydantic-core==2.41.4",
  "youtube-search==2.1.2",
  "python-dotenv==1.0.1"
]
[project.scripts]
app = "gui:app"